<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:gravity="center"
                android:src="@drawable/ic_getfood_logo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/login_welcome"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/login_punchline"
                android:textColor="@color/colorWhite"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="35dp">

            <TextView
                android:id="@+id/username-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/username"
                android:text="@string/login_username"
                android:textColor="@color/colorWhite" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/default_card"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp" />

            <TextView
                android:id="@+id/password-text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:labelFor="@id/password"
                android:text="@string/login_password"
                android:textColor="@color/colorWhite" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:background="@drawable/default_card"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:paddingHorizontal="15dp" />

                <ImageButton
                    android:id="@+id/button_fingerprint"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_alignEnd="@+id/password"
                    android:layout_marginEnd="5dp"
                    android:alpha="0.3"
                    android:background="@null"
                    android:tint="@color/colorAccent"
                    app:srcCompat="@drawable/ic_touch_id" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/default_button"
                android:text="@string/login_title"
                android:textAllCaps="false"
                android:textColor="@color/colorTextDark" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:gravity="center_horizontal" >
        <TextView
            android:id="@+id/no-account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/password"
            android:text="@string/login_sign_up"
            android:gravity="center"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>