...
    <string name="login_first_name">Firstname</string>
    <string name="login_last_name">Lastname</string>
    <string name="login_register">Register</string>
    <string name="login_to_title">Back</string>

    <!-- Getting Started Page -->
    <string name="getting_started_title">Let\'s get started!</string>
    <string name="getting_started_punchline">\"Join a family or create one\"</string>
    <string name="getting_started_or">Or</string>
    <string name="getting_started_create_family">Create Family</string>
    <string name="getting_started_create_family_description">Please fill in the name of your family.</string>
    <string name="getting_started_join_family">Join family</string>
    <string name="getting_started_join_successful">Congrats! You have joined the family!</string>
...
